# DeepCORO_CLIP

./: .coverage  .coveragerc  .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  3D_ROPE_IMPLEMENTATION.md  AI_Scribe_Research_Findings.md  AI_Scribe_Research_Summary.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRASTIVE_FIX_FINAL.md  DEPRECATION_FIXES.md  FINAL_SUMMARY.md  FrontRx_AI_Scribe_Analysis.md  OPTIMIZER_FIX_APPLIED.md  Plot_result_example.ipynb  README.md  RESTORE.json  add_embeddings.ipynb  analyze_pci_embeddings.py  check_multihead.ipynb  codecov.yml  create_test_checkpoint.py  debug_calcification_severity.py  debug_config.py  debug_ipynb.ipynb  docker_dependencies.txt  dockerfile  explore_predictions.ipynb  extract_pci_embeddings.py  generate_dataset.ipynb  generate_multiprompt_dataset.ipynb  generate_text_embeddings.py  generate_video_embeddings.py  ground_truth_pos_probs_explanation.md  monitor_run.sh  plot_middle_frame.py  plot_result_example.ipynb  prompt.md  (+29 more)
.claude/: ralph-loop.local.md  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
DeepCORO_CLIP/: run_sweep.ipynb
config/: base_config.yaml  base_config_bk.yaml  default_config.yaml  mil_config_example.yaml  runner.sh  sweep_config.yaml  sweep_config.yaml.bak  sweep_config_0.yaml  sweep_config_3.yaml  sweep_config_3.yaml.bak  sweep_config_multi_video.yaml  sweep_config_single_video.yaml  sweep_config_single_video.yaml.bak
config/clip/: base_config.yaml  base_config=.yaml  base_config_x3d_m.yaml  base_config_x3d_m_multivideo.yaml  dev_deep_coro_clip_single_video_siglip.yaml  dev_deep_coro_clip_single_video_siglip_prev.yaml  multitask_config.yaml  runner.sh  siglip2_config.yaml  siglip_balanced_config.yaml  (+19 more)
dataloaders/: __init__.py  csv_utils.py  multi_video_dataset.py  multiview_dataset.py  siglip_support.py  simple_text_dataset.py  stats_dataset.py  video_clip_dataset.py  video_dataset.py
dataset_creation/: NOTEBOOK_USAGE.md  README.md  config_template.yaml  create_synthetic_data.py  generate_dataset.py  generate_dataset_multiprompt.py  generate_siglip_category_dataset.py  notebook_usage_example.py  sample_siglip_dataset.py  siglip_full_config.yaml  test.ipynb  test_enhanced_dataset.py
dev_scripts/: generate_dataset.ipynb
docs/: MULTITASK_SETUP.md  cls_token_implementation.md  rope_3d_implementation.md  siglip_multi_positive.md
documentation/: IMPLEMENTATION_SUMMARY.md  OPTIMIZATIONS_SUMMARY.md  PARSER_CLS_TOKEN_SUMMARY.md
examples/: cls_token_example.py  rope_3d_example.py  x3d_models_example.py
models/: __init__.py  attention_pool.py  captioning_decoder.py  linear_probing.py  locca_decoder.py  masked_video_modeling.py  model.py  multi_instance_linear_probing.py  rope_3d.py  text_encoder.py  video_aggregator.py  video_encoder.py
models_evaluation/: README.md  calculmetrics.py  merge.py
multi_epoch_study_analysis_results/: aggregated_results_summary.pkl
projects/: __init__.py  base_project.py  contrastive_pretraining.py  contrastive_pretraining_project.py  contrastive_pretraining_project_v2.py  deep_coro_multiview_project.py  linear_probing_project.py  multitask_pretraining_project.py  project_types.py  typing.py
runners/: __init__.py  linear_probing_runner.py  multitask_runner.py  multiview_runner.py  typing.py  video_constrative_learning.py  video_constrative_learning_runner.py  video_constrative_learning_runner_simple.py  video_constrative_learning_runner_v2.py
scripts/: analyze_retrieval_semantics.py  calculate_severity_recall.py  compute_study_change_scores.py  external_validation.py  generate_study_level_dataset.py  main.py  merge_contrast_with_reports.py  merge_inference_csv.py  preprocess_data.py  preprocess_dataset_README.md  preprocess_dataset_template.csv  regenerate_dataset.py  reweight_edges.py  run_reproducibility_tests.py  run_reproducibility_tests.sh  run_sweep.sh  runner.sh  show_prediction_examples.py  sub_group_analysis.py  sweep_runner.sh  train.sh  train_model.py  train_model_multi_gpu.py  train_multi_gpu.py  visualize_siglip_samples.py
test/: test_actual_angles.py  test_enhanced_dataset.py  test_generate_dataset_full.py  test_multitask_components.py  test_multitask_setup.py  test_multitask_simple.py  test_rope_integration.py  test_vectorized_analysis.py  test_view_in_report.py
tests/: conftest.py  templates.py  test_clip_config_simple.py  test_ddp.py  test_files_handler.py  test_linear_probing.py  test_linear_probing_runner.py  test_losses.py  test_multi_instance_linear_probing.py  test_multi_video_dataset.py  test_parser.py  test_retrieval_metrics.py  test_rope_3d.py  test_simple_text_dataset.py  test_stats_dataset.py  test_text_encoder.py  test_video_clip_dataset.py  test_video_contrastive_learning.py  test_video_dataset.py  test_video_encoder.py  test_video_encoder_tokens.py  test_video_project.py  test_video_utils.py
utils/: anonyme_dataset_coro.py  clean_study_analysis.py  config.py  data_aggregation.py  ddp.py  dicoms.py  download_pretrained_weights.py  download_vasovision.py  enums.py  external_validation_constants.py  files_handler.py  generate_text_embeddings.py  generate_video_embeddings.py  huggingface_wrapper.py  huggingface_wrapper.py.py  logging.py  losses.py  metrics.py  optimized_metrics.py  optimizer_utils.py  orion_runtime_patches.py  parser.py  parser_typing.py  plot_metrics.py  registry.py  retrieval_metrics.py  retrieval_metrics_streaming.py  samplers.py  schedulers.py  seed.py  semantic_metrics.py  siglip_logging.py  stenosis_extractor.py  study_id_mapper.py  text_encoder.py  typing.py  validation_logger.py  vessel_constants.py  video.py  video_project.py  (+2 more)
(+140 files in other folders)
