[project]
name = "deepcoro_clip"
version = "0.1.0"
description = "Deep learning model for medical video and text alignment"
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.46.3",
    "timm==1.0.11",
    "wandb==0.18.0",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "tqdm==4.66.3",
    "Pillow==11.0.0",
    "einops==0.7.0",
    "av==11.0.0",
    "opencv-python==4.10.0.84",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "matplotlib==3.9.3",
    "torchmetrics==1.3.1",
    "pytorch-cuda==12.1",
    "pytorchvideo==0.1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "pre-commit==3.6.2",
    "torchinfo==1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

# Enable specific rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 